--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,23 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": {
+        "mailmanAPI": {
+            "type": "git",
+            "url": "https://github.com/thiagogomesverissimo/mailmanAPI.git"
+        }
+    },
     "require": {
         "php": "^7.2.5",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "splattner/mailmanapi": "dev-master",
+        "uspdev/laravel-usp-theme": "dev-master",
+        "uspdev/replicado": "^1.5",
+        "uspdev/senhaunica-socialite": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
