--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0",
         "splattner/mailmanapi": "dev-master",
         "uspdev/laravel-usp-theme": "dev-master",
         "uspdev/replicado": "^1.5",
