--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "splattner/mailmanapi": "dev-master",
+        "uspdev/cache": "^0.7.1",
         "uspdev/laravel-usp-theme": "dev-master",
         "uspdev/replicado": "^1.5",
         "uspdev/senhaunica-socialite": "^2.0"
