--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "repositories": {
         "mailmanAPI": {
             "type": "git",
-            "url": "https://github.com/thiagogomesverissimo/mailmanAPI.git"
+            "url": "https://github.com/fflch/mailmanAPI.git"
         }
     },
     "require": {
