--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
@@ -48,6 +48,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 SENHAUNICA_KEY=
 SENHAUNICA_SECRET=
 SENHAUNICA_CALLBACK_ID=
+SENHAUNICA_DEV="https://dev.uspdigital.usp.br/wsusuario/oauth"
 
 REPLICADO_HOST=
 REPLICADO_PORT=
