--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ REPLICADO_PORT=
 REPLICADO_DATABASE=
 REPLICADO_USERNAME=
 REPLICADO_PASSWORD=
-REPLICADO_CODUND=
+REPLICADO_CODUNDCLG=
 
 ADMINS=
 
