--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.7",
         "splattner/mailmanapi": "dev-master",
         "uspdev/laravel-usp-theme": "^2.0",
         "uspdev/replicado": "^1.5",
