--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.5|^7.0.1",
+        "guzzlehttp/guzzle": "^6.0",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
