--- a/composer.json
+++ b/composer.json
@@ -14,26 +14,24 @@
         }
     },
     "require": {
-        "php": "^7.2.5",
+        "php": "^8.1.0",
         "doctrine/dbal": "^3.0",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
-        "guzzlehttp/guzzle": "^6.0",
-        "laravel/framework": "^8.0",
+        "guzzlehttp/guzzle": "^7.8.2",
+        "laravel/framework": "^12.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.0",
-        "rap2hpoutre/laravel-log-viewer": "^1.7",
-        "splattner/mailmanapi": "dev-master",
+        "laravel/ui": "^4.0",
+        "rap2hpoutre/laravel-log-viewer": "^2.5",
+        "fflch/mailmanapi": "dev-master",
         "uspdev/laravel-usp-theme": "^2.0",
         "uspdev/replicado": "^1.5",
         "uspdev/senhaunica-socialite": "^4.0"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -57,7 +55,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
